# stacktach

./: .coverage  .gitignore  .gitreview  .travis.yml  README  README.md  local_settings.py.bak  manage.py  run_integration_tests.sh  run_tests.sh  run_tests_venv.sh  settings.py  setup.cfg  setup.py  start_workers.py  tox.ini  urls.py  worker.py  worker_conf.py  worker_new.py
debian/: changelog  control  default  install  postinst  rules
docs/: Makefile  api.rst  conf.py  dbapi.rst  index.rst  intro.rst  setup.rst  usage.rst
etc/: pip-requires.txt  sample_local_settings.py  sample_reconciler_config.json  sample_region_mapping.json  sample_stacktach_config.sh  sample_stacktach_prune.sh  sample_stacktach_verifier_config.json  sample_stacktach_worker_config.json  test-requires.txt
migrations/: 001_base.sql  002_delta.sql  002_task.sql  002_task_indexes.sql  003_delta.sql  003_image_type.sql  003_image_type_indexes.sql  003_populate_task_and_image.py  004_usage.sql  005_reports.txt  006_delta.sql  006_populate_all_usage.py  006_populate_rebuilds.py  006_populate_rebuilds_from_rawdata.py  006_populate_usage_from_rawdata.py  006_verifier.sql  006_verifier_indexes.sql  007_delta.sql  007_exists_send_status.sql  007_exists_send_status_indexes.sql  008_delta.sql  008_exists_audit_period.py  008_exists_audit_period.sql  008_exists_audit_period_indexes.sql  009_delta.sql  009_populate_past_launches.py  010_populate_past_deletes.py  011_add_tenant_id_to_instanceexists_and_instanceusage.sql  011_populate_tenant_id_in_instanceexists_from_rawdata.py  012_shrink_fail_reason.sql  (+2 more)
(+110 files in other folders)
