[metadata]
name = stacktach
version = 2.2
author = Dark Secret Software Inc., Rackspace Hosting
author-email = admin@darksecretsoftware.com
summary = OpenStack Monitoring and Billing
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
keywords =
    setup
    distutils
[files]
packages =
    stacktach
